Split jmxtrans.sh